--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <link rel="stylesheet" href="./style.css">
-        <link rel="icon" href="./Images/icono.ico">
+        <link rel="icon" href="./Images/Icon.ico">
         <title>Netflix</title>
     </head>
     <body class="flex flex-col w-full bg-[#333333] gap-2">
@@ -18,22 +18,21 @@
                 top: 0px;
             }
         </style>
-        <!--Caja con fondo-->
-        <section class="bg-[url('https://assets.nflxext.com/ffe/siteui/vlv3/8f12b4f0-a894-4d5b-9c36-5ba391c63fbe/3424ab9c-4257-46ae-984e-8836329f0ba9/VE-es-20230320-popsignuptwoweeks-perspective_alpha_website_medium.jpg')] w-[100%] h-[110vh] bg-[length:1680px_918px] bg-bottom">
 
+        <!-- Section 1 - Fondo -->
+        <section class="bg-[url('https://assets.nflxext.com/ffe/siteui/vlv3/8f12b4f0-a894-4d5b-9c36-5ba391c63fbe/3424ab9c-4257-46ae-984e-8836329f0ba9/VE-es-20230320-popsignuptwoweeks-perspective_alpha_website_medium.jpg')] w-[100%] h-[110vh] bg-[length:1680px_880px] bg-bottom">
             <div class="flex flex-col w-[100%] h-[100%] justify-around bg-gradient-to-b from-black/90 via-black/25 to-black/90">
-
+                <!-- Barra de Navegación -->
                 <nav class="flex absolute mx-[156px] mt-[18px]">
-
                     <img class="w-[157px] h-[49px]" src="./Images/Logo.png" alt="Logo">
-
-                    <div class="flex gap-4">
-                        <select class="w-[133px] h-[34px] pl-[30px] pb-[4px] ml-[600px] mt-[9px] font-sans text-white text-[18px] bg-transparent border-[1px] border-solid border-inherit rounded " name="Idioma">
-                            <option class="pl-[8px] pr-[30px] text-black-900" value="">Español</option>
-                            <option class="pl-[4px]" value="">English</option>
+                    <div class="absolute flex gap-4 rounded ml-[760px] mt-2">
+                        <img class="relative z-10 ml-2 mt-1.5 h-5" src="./Images/world.png">
+                        <select class="absolute w-[128px] h-[32px] pl-[30px] pb-1 tracking-tight text-sans text-white text-[18px] bg-black/20 border-[1px] border-solid border-gray-500 rounded " name="Idioma">
+                            <option class="bg-current text-current text-[17px] tracking-tight " >Español</option>
+                            <option class="bg-current text-current text-[17px] tracking-tight " >English</option>
                         </select>
                         <a href="https://www.netflix.com/ve/login">
-                            <button class="bg-red-500 mt-[10px] ml-[8px] w-[118px] h-[33px] rounded font-sans text-[15px] text-white pb-[2px]">Iniciar sesión</button>
+                            <button class=" bg-red-600 hover:bg-red-700 ml-[108px] mr-[60px] w-[115px] h-[32px] rounded text-[15px] text-sans text-white pb-[2px]">Iniciar sesión</button>
                         </a>
                     </div>
                 </nav>
@@ -44,96 +43,103 @@
                     <p class="font-sans text-white text-[24px] font-medium ">Disfruta donde quieras. Cancela cuando quieras.</p>
                     <p class="font-sans text-white text-[20px] font-medium">¿Quieres ver Netflix ya? Ingresa tu email para crear una cuenta o reiniciar tu membresía de Netflix.</p>
                     <div class="flex flex-row justify-center items-center">
-                        <input class="w-[397px] h-[57px] text-white text-lg bg-black/40 rounded border-[1px] border-gray-600 pl-4 pb-1 ml-4" type="text" placeholder="Email">
-                        <a class="bg-red-600 ml-2 px-[25px] py-[9px] rounded font-sans text-[25px] text-white mr-[15px]" href="">
-                            Comenzar >
-                        </a>
+                        <input class="w-[397px] h-[57px] text-white text-lg bg-black/40 rounded border-[1px] border-gray-500 pl-4 pb-1 ml-4" type="text" placeholder="Email">
+                        <div class="grid grid-cols-2 bg-red-600 hover:bg-red-700 ml-2 mr-[15px] w-[170px] h-[57px] rounded pt-2 pl-5 pb-1">
+                            <a class="font-sans text-[25px] text-white" href="">
+                                Comenzar
+                            </a>
+                            <img class="w-5 ml-[40px] mt-[10px]" src="./Images/icon.png" alt="">
+                        </div>
                     </div>
                 </main>
             </div>
         </section>
 
-        <!-- Section 1 -->
-        <section class="grid grid-cols-2 bg-[#010100] w-[100%] h-[520px]">
+        <!-- Section 2 -->
+        <section class="grid grid-cols-2 bg-black w-[100%] h-[520px]">
+            <!-- Columna 1 -->
             <div class="flex flex-col justify-center ml-[160px] text-white">
                 <h1 class="text-[50px] font-black mt-4 pb-4">Disfruta en tu TV</h1>
                 <p class="text-[25px] leading-[25px]">Ve en smart TV, PlayStation, Xbox, Chromecast, Apple TV, reproductores de Blu-ray y más.</p>
             </div>
-
+            <!-- Columna 2 -->
             <div class="relative mt-[60px]">
                 <video class="absolute top-[70px] w-[430px] ml-[75px] " data-uia="nmhp-card-animation-asset-video" autoplay="" playsinline="" muted="" loop=""><source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-0819.m4v" type="video/mp4"></video>
                 <img class="relative w-[500px] ml-[8px] " src="./Images/download1.png" alt="">
             </div>
         </section>
 
-        <!-- Section 2 -->
+        <!-- Section 3 -->
         <section class="grid grid-cols-2 bg-black w-[100%] h-[520px]">
+            <!-- Columna 1 -->
             <div class="relative">
                 <img class="w-[500px] ml-[165px] mt-[70px]" src="./Images/download2.jpg" alt="Telefono">
-
-            <section class="grid grid-cols-3 absolute ml-[280px] mt-[325px] ">
-                <div class="w-[300px] h-[90px] border border-[2px] pt-[7px] pl-[10px] bg-black rounded-[10px]">
+                <div class="grid grid-rows-2 absolute ml-[275px] mt-[325px] w-[280px] h-[95px] border border-[2px] shadow-lg shadow-black/50 pt-[7px] pl-[10px] bg-black rounded-[10px]">
                     <img class="w-[50px]" src="./Images/download4.png" alt="Stranger Things">
-                <div class="ml-[70px]">
-                    <p class="text-lg leading-3 text-white">Stranger Things</p>
-                    <p class="text-blue-600 text-base">Descargando...</p>
+                    <p class="ml-[65px] text-[18px] text-white tracking-tight">Stranger Things</p>
+                    <p class="ml-[65px] mt-1 mb-[25px] text-[15px] text-blue-600 tracking-tight">Descargando...</p>
+                    <img class="absolute w-[45px] ml-[218px] mt-[20px] " src="./Images/download.gif" alt="download">
                 </div>
-                <div class="mb-[70px]">
-                    <img class="w-[50px]" src="./Images/download.gif" alt="download">
-                </div>
-                </div>
-            </section> 
             </div>
-
+            <!-- Columna 2 -->
             <div class="flex flex-col justify-center text-white ml-2 ">
                 <h1 class="text-[50px] font-black pr-[210px] leading-[70px]">Descarga tus series para verlas offline</h1>
                 <p class="text-[25px] leading-[25px] pr-[130px] mt-[17px]" >Guarda tu contenido favorito y tendrás siempre algo para ver.</p>
             </div>
         </section>
 
-        <!-- Section 3 -->
+        <!-- Section 4 -->
         <section class="grid grid-cols-2 bg-black w-[100%] h-[520px]">
+            <!-- Columna 1 -->
             <div class="flex flex-col justify-center ml-[160px] text-white">
                 <h1 class="text-[50px] font-black mt-4 pb-4">Disfruta donde quieras</h1>
                 <p class="text-[25px] leading-[25px]">Películas y series ilimitadas en tu teléfono, tablet, computadora y TV sin costo adicional.</p>
             </div>
-
+            <!-- Columna 2 -->
             <div class="relative mt-[60px]">
                 <video class="absolute top-[40px] w-[300px] ml-[110px] " data-uia="nmhp-card-animation-asset-video" autoplay="" playsinline="" muted="" loop=""><source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices.m4v" type="video/mp4"></video>
                 <img class="relative w-[500px] ml-[8px] " src="./Images/download3.png" alt="">
             </div>
         </section>
 
-        <!-- Section 4 -->
+        <!-- Section 5 -->
         <section class="grid grid-cols-2 bg-black w-[100%] h-[520px]">
+            <!-- Columna 1 -->
             <div class="flex flex-col justify-center ">
                 <img class="w-[500px] ml-[160px]" src="./Images/niños.png" alt="Niños">
             </div>
-
+            <!-- Columna 2 -->
             <div class="flex flex-col justify-center text-white">
                 <h1 class="text-[50px] font-black pr-[210px] leading-[70px]">Crea perfiles para niños</h1>
                 <p class="text-[25px] leading-[25px] pr-[150px] mt-[17px]">Los niños vivirán aventuras con sus personajes favoritos en un espacio diseñado exclusivamente para ellos, sin costo con tu membresía.</p>
             </div>
         </section>
 
+        <!-- Section 6 -->
         <section class="grid grid-rows-1 bg-black w-[100%] h-[780px]">
             <div class="flex flex-col items-center">
                 <h1 class="text-[50px] text-white font-black mt-[60px]">Preguntas frecuentes</h1>
             </div>
             <div class="flex flex-col items-center h-[180px]">
                 <p class="font-sans text-white text-[20px] font-medium">¿Quieres ver Netflix ya? Ingresa tu email para crear una cuenta o reiniciar tu membresía de Netflix.</p>
-                    <div class="flex flex-row justify-center items-center">
-                        <input class="w-[397px] h-[57px] text-white text-lg bg-black/40 rounded border-[1px] border-gray-600 pl-4 pb-1 mt-[23px] ml-4" type="text" placeholder="Email">
-                        <a class="bg-red-600 ml-2 px-[25px] py-[9px] rounded font-sans text-[25px] text-white mt-[23px] mr-[15px]" href="">
-                            Comenzar >
+                <div class="flex flex-row justify-center items-center mt-[20px]">
+                    <input class="w-[397px] h-[57px] text-white text-lg bg-black/90 rounded border-[1px] border-gray-500 pl-4 pb-1 ml-4" type="text" placeholder="Email">
+                    <div class="grid grid-cols-2 bg-red-600 hover:bg-red-700 ml-2 mr-[15px] w-[170px] h-[57px] rounded pt-2 pl-5 pb-1">
+                        <a class="font-sans text-[25px] text-white" href="">
+                            Comenzar
                         </a>
+                        <img class="w-5 ml-[40px] mt-[10px]" src="./Images/icon.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
 
+        <!-- Pie de página -->
         <footer class="grid grid-cols-3 bg-black w-[100%] h-[480px]">
+            <!-- Columna 1 -->
             <div class="flex flex-col text-white ml-[160px] mt-[55px] w-[400px]">
                 <p>¿Preguntas? Llama al <a class="underline decoration-1">1 (408) 469-4467 (USA)</a></p>
-                <div class="underline decoration-1 text-gray/900 leading-8 mt-[30px]">
+                <div class="underline decoration-1 text-gray/900 text-sm leading-8 mt-[30px]">
                     <div>
                         <a href="https://help.netflix.com/es/node/412">Preguntas frecuentes</a>
                     </div>
@@ -153,14 +159,17 @@
                         <a href="https://www.netflix.com/ve/browse/genre/839338">Solo en Netflix</a>
                     </div>
                 </div>
-                <select class="w-[133px] h-[30px] pl-[30px] pb-[4px] mt-[30px] font-sans text-[18px] bg-transparent border-[1px] border-solid border-inherit rounded " name="Idioma">
-                    <option class="pl-[8px] pr-[30px] text-black-900" value="">Español</option>
-                    <option class="pl-[4px]" value="">English</option>
-                </select>
-                <p class="text-sm mt-[30px]">Netflix Venezuela</p>
+                <div class="relative flex gap-4 rounded mt-8">
+                    <img class="absolute z-10 ml-2 mt-1.5 h-5 bg-white" src="./Images/world_fondo_negro.png">
+                    <select class=" w-[128px] h-[32px] pl-[30px] pb-1 tracking-tight text-sans text-white text-[18px] bg-black/20 border-[1px] border-solid border-inherit rounded " name="Idioma">
+                        <option class="bg-current text-current text-[17px] tracking-tight " >Español</option>
+                        <option class="bg-current text-current text-[17px] tracking-tight " >English</option>
+                    </select>
+                </div>
+                <p class="text-sm mt-[22px]">Netflix Venezuela</p>
             </div>
-
-            <div class="mt-[110px] underline decoration-1 text-white leading-8 ml-[50px]">
+            <!-- Columna 2 -->
+            <div class="mt-[110px] ml-[55px] underline decoration-1 text-white text-sm leading-8">
                 <div>
                     <a href="https://help.netflix.com/legal/giftcardandbalanceterms">Términos de las tarjetas de regalo</a>
                 </div>
@@ -177,8 +186,8 @@
                     <a href="https://fast.com/es/">Prueba de velocidad</a>
                 </div>
             </div>
-
-            <div class="mt-[110px] underline decoration-1 text-white leading-8">
+            <!-- Columna 3 -->
+            <div class="mt-[110px] underline decoration-1 text-white text-sm leading-8">
                 <div>
                     <a href="https://help.netflix.com/es/">Centro de ayuda</a>
                 </div>
